@@ -4,6 +4,7 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
 import com.credigo.backend.dto.PaymentResponse;
+import com.credigo.backend.dto.PaymentStatusResponse;
 import com.credigo.backend.dto.WalletTopUpRequest;
 import org.springframework.core.ParameterizedTypeReference;
 import org.slf4j.Logger;
@@ -14,17 +15,19 @@ import java.util.*;
 
 import reactor.core.publisher.Mono;
 import java.util.Base64;
+import org.springframework.web.reactive.function.client.WebClientResponseException;
+import lombok.extern.slf4j.Slf4j;
 
 @Service
+@Slf4j
 public class PaymentServiceImpl implements PaymentService {
-    private static final Logger log = LoggerFactory.getLogger(PaymentServiceImpl.class);
-
     private final String secretKey;
-    private final WebClient webClient;
     private final String successUrl;
     private final String cancelUrl;
     private final String webhookUrl;
     private final String apiVersion;
+    private final WebClient webClient;
+    private final WalletService walletService;
 
     public PaymentServiceImpl(
             @Value("${paymongo.secret.key}") String secretKey,
@@ -32,7 +35,8 @@ public class PaymentServiceImpl implements PaymentService {
             @Value("${paymongo.success.url}") String successUrl,
             @Value("${paymongo.cancel.url}") String cancelUrl,
             @Value("${paymongo.webhook.url}") String webhookUrl,
-            @Value("${paymongo.api.version}") String apiVersion) {
+            @Value("${paymongo.api.version}") String apiVersion,
+            WalletService walletService) {
 
         if (secretKey == null || secretKey.trim().isEmpty()) {
             throw new IllegalArgumentException("PayMongo secret key is not configured.");
@@ -43,6 +47,7 @@ public class PaymentServiceImpl implements PaymentService {
         this.cancelUrl = cancelUrl;
         this.webhookUrl = webhookUrl;
         this.apiVersion = apiVersion;
+        this.walletService = walletService;
 
         this.webClient = WebClient.builder()
                 .baseUrl(baseUrl)
@@ -75,7 +80,7 @@ public class PaymentServiceImpl implements PaymentService {
     private PaymentResponse createCardPaymentIntent(long amountInCentavos, String username) {
         Map<String, Object> attributes = new HashMap<>();
         attributes.put("amount", amountInCentavos);
-        attributes.put("payment_method_allowed", Collections.singletonList("card"));
+        attributes.put("payment_method_allowed", List.of("card"));
         attributes.put("currency", "PHP");
         attributes.put("description", "Wallet top-up for " + username);
         attributes.put("statement_descriptor", "CrediGo Top-up");
@@ -88,28 +93,42 @@ public class PaymentServiceImpl implements PaymentService {
         Map<String, Object> requestBody = new HashMap<>();
         requestBody.put("data", Map.of("attributes", attributes));
 
-        Map<String, Object> response = webClient.post()
-                .uri("/payment_intents")
-                .bodyValue(requestBody)
-                .retrieve()
-                .bodyToMono(new ParameterizedTypeReference<Map<String, Object>>() {})
-                .block();
+        log.info("Sending PayMongo payment intent request: {}", requestBody);
 
-        if (response == null || !(response.get("data") instanceof Map)) {
-            throw new RuntimeException("Invalid response structure from PayMongo.");
+        try {
+            Map<String, Object> response = webClient.post()
+                    .uri("/payment_intents")
+                    .bodyValue(requestBody)
+                    .retrieve()
+                    .bodyToMono(new ParameterizedTypeReference<Map<String, Object>>() {})
+                    .block();
+
+            if (response == null || !(response.get("data") instanceof Map)) {
+                throw new RuntimeException("Invalid response structure from PayMongo.");
+            }
+
+            Map<String, Object> responseData = (Map<String, Object>) response.get("data");
+            Map<String, Object> responseAttributes = (Map<String, Object>) responseData.get("attributes");
+
+            // Convert amount to Long regardless of whether it's Integer or Long
+            Long amount = null;
+            Object amtObj = responseAttributes.get("amount");
+            if (amtObj instanceof Number) {
+                amount = ((Number) amtObj).longValue();
+            }
+
+            return new PaymentResponse(
+                (String) responseAttributes.get("client_key"),
+                null,
+                (String) responseAttributes.get("status"),
+                (String) responseData.get("id"),
+                (String) responseAttributes.get("currency"),
+                amount
+            );
+        } catch (WebClientResponseException e) {
+            log.error("PayMongo API error: {} - {}", e.getRawStatusCode(), e.getResponseBodyAsString());
+            throw new RuntimeException("PayMongo API error: " + e.getMessage(), e);
         }
-
-        Map<String, Object> responseData = (Map<String, Object>) response.get("data");
-        Map<String, Object> responseAttributes = (Map<String, Object>) responseData.get("attributes");
-
-        return new PaymentResponse(
-            (String) responseAttributes.get("client_key"),
-            null,
-            (String) responseAttributes.get("status"),
-            (String) responseData.get("id"),
-            (String) responseAttributes.get("currency"),
-            (Long) responseAttributes.get("amount")
-        );
     }
 
     private PaymentResponse createEWalletSource(long amountInCentavos, String username, String type) {
@@ -169,13 +188,20 @@ public class PaymentServiceImpl implements PaymentService {
         Map<String, Object> paymentResponseAttributes = (Map<String, Object>) paymentData.get("attributes");
         Map<String, Object> redirectAttributes = (Map<String, Object>) ((Map<String, Object>) sourceData.get("attributes")).get("redirect");
 
+        // Convert amount to Long regardless of whether it's Integer or Long
+        Long amount = null;
+        Object amtObj = paymentResponseAttributes.get("amount");
+        if (amtObj instanceof Number) {
+            amount = ((Number) amtObj).longValue();
+        }
+
         return new PaymentResponse(
             null,
             (String) redirectAttributes.get("checkout_url"),
             (String) paymentResponseAttributes.get("status"),
             (String) paymentData.get("id"),
             (String) paymentResponseAttributes.get("currency"),
-            (Long) paymentResponseAttributes.get("amount")
+            amount
         );
     }
 
@@ -264,6 +290,102 @@ public class PaymentServiceImpl implements PaymentService {
         } catch (Exception e) {
             log.error("Error verifying payment: {}", e.getMessage());
             throw new RuntimeException("Failed to verify payment: " + e.getMessage());
+        }
+    }
+
+    @Override
+    public PaymentStatusResponse checkPaymentStatus(String paymentIntentId, String username) {
+        if (paymentIntentId == null || paymentIntentId.isBlank()) {
+            return PaymentStatusResponse.failed(paymentIntentId, "Invalid payment intent ID");
+        }
+
+        try {
+            log.info("Checking payment status for paymentIntentId: {}, username: {}", paymentIntentId, username);
+
+            Map<String, Object> response = webClient.get()
+                    .uri("/payment_intents/" + paymentIntentId)
+                    .retrieve()
+                    .bodyToMono(new ParameterizedTypeReference<Map<String, Object>>() {})
+                    .block();
+
+            if (response == null || !(response.get("data") instanceof Map)) {
+                log.warn("Invalid or empty response while checking payment status for {}", paymentIntentId);
+                return PaymentStatusResponse.notFound(paymentIntentId);
+            }
+
+            Map<String, Object> responseData = (Map<String, Object>) response.get("data");
+            Map<String, Object> responseAttributes = (Map<String, Object>) responseData.get("attributes");
+
+            String status = (String) responseAttributes.get("status");
+            Long amount = null;
+            Object amtObj = responseAttributes.get("amount");
+            if (amtObj instanceof Number) {
+                amount = ((Number) amtObj).longValue();
+            }
+            String currency = (String) responseAttributes.get("currency");
+
+            // Check if this payment is already credited to avoid double-crediting
+            Map<String, Object> metadata = (Map<String, Object>) responseAttributes.get("metadata");
+            String transactionType = null;
+            String paymentUsername = null;
+
+            if (metadata != null) {
+                transactionType = (String) metadata.get("transaction_type");
+                paymentUsername = (String) metadata.get("credigo_username");
+            }
+
+            // Verify this payment is for wallet top-up and for the current user
+            if (!"wallet_topup".equals(transactionType)) {
+                log.warn("Payment {} is not a wallet top-up transaction", paymentIntentId);
+                return PaymentStatusResponse.failed(paymentIntentId, "Not a wallet top-up transaction");
+            }
+
+            if (!username.equals(paymentUsername)) {
+                log.warn("Payment {} belongs to user {}, not {}", paymentIntentId, paymentUsername, username);
+                return PaymentStatusResponse.failed(paymentIntentId, "Payment belongs to another user");
+            }
+
+            if ("succeeded".equals(status)) {
+                // Payment succeeded - credit the wallet if needed
+                try {
+                    BigDecimal amountDecimal = BigDecimal.valueOf(amount).divide(new BigDecimal("100"));
+                    String description = (String) responseAttributes.get("description");
+                    if (description == null) {
+                        description = "Wallet top-up via PayMongo";
+                    }
+
+                    walletService.addFundsToWallet(username, amountDecimal, paymentIntentId, description);
+                    log.info("Successfully credited wallet for user {} via PayMongo payment {} ({} {})",
+                            username, paymentIntentId, amountDecimal, currency);
+
+                    return PaymentStatusResponse.succeeded(paymentIntentId, amount, currency, true);
+                } catch (Exception e) {
+                    log.error("Failed to credit wallet for paymentIntentId {}: {}", paymentIntentId, e.getMessage(), e);
+                    return PaymentStatusResponse.succeeded(paymentIntentId, amount, currency, false);
+                }
+            } else {
+                // Payment not yet succeeded
+                return new PaymentStatusResponse(
+                    paymentIntentId,
+                    status,
+                    false,
+                    "Payment status: " + status,
+                    amount,
+                    currency
+                );
+            }
+
+        } catch (WebClientResponseException e) {
+            if (e.getStatusCode().value() == 404) {
+                log.warn("Payment intent {} not found", paymentIntentId);
+                return PaymentStatusResponse.notFound(paymentIntentId);
+            }
+            log.error("PayMongo API error while checking payment status: {} - {}",
+                    e.getRawStatusCode(), e.getResponseBodyAsString());
+            return PaymentStatusResponse.failed(paymentIntentId, "API Error: " + e.getMessage());
+        } catch (Exception e) {
+            log.error("Error checking payment status for {}: {}", paymentIntentId, e.getMessage(), e);
+            return PaymentStatusResponse.failed(paymentIntentId, e.getMessage());
         }
     }
 }
